# dbport

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  TEST_COVERAGE_ANALYSIS.md  index.html  plan.md  pyproject.toml  ruff.toml  zensical.toml
.claude/: launch.json  setup.sh
.github/workflows/: ci.yml  docs.yml  release.yml
0.1.0/: search.json  sitemap.xml
0.1.0/api/: index.html
0.1.0/concepts/: index.html
0.1.0/concepts/hooks/: index.html
0.1.0/concepts/lock-file/: index.html
0.1.0/concepts/metadata/: index.html
0.1.0/concepts/outputs/: index.html
0.1.0/examples/cli-workflow/: index.html
0.1.0/versions/: index.html
docs/: backlog.md  brand.md  changelog.md  client.md  dbport.md  dbport_cli.md  index.md  release-versioning.md  roadmap.md
docs/api/: cli.md  index.md  python.md
docs/concepts/: authorship.md  hooks.md  index.md  inputs.md  lock-file.md  metadata.md  outputs.md  versioning.md  warehouses.md
docs/examples/: cli-workflow.md  index.md  python-workflow.md
docs/getting-started/: about.md  credentials.md  index.md  installation.md  quickstart.md
docs/stylesheets/: brand.css
docs/versions/: changelog.md  index.md  release-versioning.md  roadmap.md
examples/minimal/: main.py
examples/minimal_cli/: run.sh
latest/: 404.html  index.html
latest/examples/: index.html
latest/getting-started/: index.html
latest/stylesheets/: brand.css
overrides/: main.html
scripts/: preview_docs.sh  update_versions.py
src/dbport/: __init__.py
src/dbport/cli/: errors.py  (+5 more)
tests/: conftest.py
tests/test_dbport/: __init__.py
(+131 files in other folders)
